--- a/index.html
+++ b/index.html
@@ -346,6 +346,13 @@
           ></i
         ></a>
       </li>
+      <li>
+        <a href="mtptlijst.html" class="link2"
+          ><i class="fa-solid fa-magnet"></i>MT & PT Tools<i
+            class="fa-solid fa-magnet"
+          ></i
+        ></a>
+      </li>
     </ul>
 
     <button class="install-button" onclick="installPWA()" style="display: none">
