--- a/mtptlijst.html
+++ b/mtptlijst.html
@@ -122,6 +122,7 @@
 
     <ul class="link-list">
         <li><a href="MTPT.html" class= "link1"><i class="fa-solid fa-ban"></i> Acceptatie criteria</a></li>
+        <li><a href="mtbank.html" class= "link2"><i class="fa-solid fa-magnet"></i> Magneetbank tool</a></li>
     </ul>
 
 <div style="height: 200px;"></div>
