--- a/index.html
+++ b/index.html
@@ -312,6 +312,13 @@
         ></a>
       </li>
       <li>
+        <a href="filmvoorraad.html" class="link1"
+          ><i class="fa-solid fa-clipboard-check"></i>Filmvoorraad bus<i
+            class="fa-solid fa-clipboard-check"
+          ></i
+        ></a>
+      </li>
+      <li>
         <a href="zinnen.html" class="link2"
           ><i class="fa-solid fa-comment"></i>Rapportage zinnen<i
             class="fa-solid fa-comment"
