--- a/filmvoorraad.html
+++ b/filmvoorraad.html
@@ -25,7 +25,7 @@
         }
     </style>
 </head>
-<body class="bg-slate-900 h-screen flex flex-col text-slate-100 font-sans overflow-hidden">
+<body class="bg-slate-900 h-screen supports-[height:100dvh]:h-[100dvh] flex flex-col text-slate-100 font-sans overflow-hidden">
 
     <!-- Compact Top Navigation -->
     <div class="flex-none p-3 bg-slate-900 border-b border-slate-700 flex items-center justify-between z-10 shadow-md">
@@ -72,7 +72,7 @@
 
         <!-- Table Container -->
         <div class="flex-1 bg-slate-800 rounded-xl shadow-xl border border-slate-600 relative overflow-hidden flex flex-col">
-            <div class="flex-1 overflow-y-auto overscroll-contain">
+            <div class="flex-1 overflow-y-auto overscroll-contain pb-6">
                 <table class="w-full text-center border-collapse h-full">
                     <thead class="sticky top-0 z-20 bg-slate-900 shadow-md">
                         <tr class="text-white text-sm">
@@ -89,8 +89,8 @@
             </div>
         </div>
         
-        <!-- Bottom spacing for aesthetics -->
-        <div class="h-2"></div>
+        <!-- Bottom spacing for aesthetics and mobile nav buttons -->
+        <div class="h-16"></div>
 
     </div>
 
