--- a/buistabel.html
+++ b/buistabel.html
@@ -136,9 +136,8 @@
     </div>
 
      <ul class="link-list">
-        <li><a href="focusverandering.html" class="link1"><i class="fa-solid fa-up-down"></i>Focusverandering<i class="fa-solid fa-up-down"></i></a></li>
-        <li><a href="filmsoortverandering.html" class="link2"><i class="fa-solid fa-repeat"></i>D4 D5 D7<i class="fa-solid fa-repeat"></i></a></li>
-    </ul>
+        <li><a href="focusverandering.html" class="link1"><i class="fa-solid fa-up-down"></i>FFD&Filmtype<i class="fa-solid fa-up-down"></i></a></li>     
+     </ul>
 
     <!-- De knop om het pop-up venster te openen -->
     <button class="info-btn" onclick="openModal('myModal')">i</button>
