--- a/index.html
+++ b/index.html
@@ -319,15 +319,8 @@
         ></a>
       </li>
       <li>
-        <a href="zinnen.html" class="link2"
-          ><i class="fa-solid fa-comment"></i>Rapportage zinnen<i
-            class="fa-solid fa-comment"
-          ></i
-        ></a>
-      </li>
-      <li>
-        <a href="tekens.html" class="link4"
-          ><i class="fa-solid fa-keyboard"></i>Rapportage Speciale Tekens<i
+        <a href="rapportagelijst.html" class="link4"
+          ><i class="fa-solid fa-keyboard"></i>Rapportage Tools<i
             class="fa-solid fa-keyboard"
           ></i
         ></a>
