--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
           "onstream.html",
           "opnamesklasseb.html",
           "mtptlijst.html",
+          "rapportagelijst.html",
           "buistabel.html",
         ];
         let remoteItems = [];
