--- a/index.html
+++ b/index.html
@@ -319,6 +319,13 @@
         ></a>
       </li>
       <li>
+        <a href="lasfout.html" class="link3"
+          ><i class="fa-solid fa-burst"></i>Lasfout Acceptatie<i
+            class="fa-solid fa-burst"
+          ></i
+        ></a>
+      </li>
+      <li>
         <a href="rapportagelijst.html" class="link4"
           ><i class="fa-solid fa-keyboard"></i>Rapportage Tools<i
             class="fa-solid fa-keyboard"
